Upgrade 1.0 to 2.0 - Move the authentication filter to api-gateway module